[package]
name = "curve-tool"
version = "0.1.0"
authors = ["Gordon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap     = { version = "2.33", features = [ "yaml" ] }
near-sdk = "3.1.0"
uint     = { version = "0.9.0", default-features = false }